--- a/src/main/resources/com/grakovich/salesaccountingclient/controller/main-page.fxml
+++ b/src/main/resources/com/grakovich/salesaccountingclient/controller/main-page.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Polygon?>
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.text.Font?>
@@ -20,7 +22,6 @@
          <children>
             <StackPane fx:id="contentPane" prefHeight="602.0" prefWidth="674.0">
                <children>
-                  <Pane fx:id="paneProducts" prefHeight="200.0" prefWidth="200.0" styleClass="content-pane" />
                   <Pane fx:id="paneClients" prefHeight="200.0" prefWidth="200.0" styleClass="content-pane">
                      <children>
                         <AnchorPane layoutY="-1.0" prefHeight="233.0" prefWidth="674.0">
@@ -87,27 +88,147 @@
                         </TextField>
                      </children>
                   </Pane>
+                  <Pane fx:id="paneProducts" prefHeight="200.0" prefWidth="200.0" styleClass="content-pane">
+                     <children>
+                        <AnchorPane prefHeight="241.0" prefWidth="674.0">
+                           <children>
+                              <Button layoutX="433.0" layoutY="22.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="54.0" prefWidth="226.0" styleClass="content-button" text="Добавить">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Button>
+                              <TextField fx:id="tfProductModel" layoutX="138.0" layoutY="14.0" prefHeight="35.0" prefWidth="226.0" promptText="Введите название модели">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </TextField>
+                              <Label layoutX="14.0" layoutY="14.0" prefHeight="54.0" prefWidth="69.0" text="Модель:">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Label>
+                              <TextField fx:id="tfProductPrice" layoutX="138.0" layoutY="106.0" prefHeight="35.0" prefWidth="226.0" promptText="Введите цену за единицу">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </TextField>
+                              <TextField fx:id="tfProductAmount" layoutX="138.0" layoutY="59.0" prefHeight="35.0" prefWidth="226.0" promptText="Введите количество">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </TextField>
+                              <Label layoutX="14.0" layoutY="59.0" prefHeight="54.0" prefWidth="102.0" text="Количество:">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="14.0" layoutY="110.0" prefHeight="54.0" prefWidth="69.0" text="Цена/ед:">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Label>
+                              <Button layoutX="433.0" layoutY="94.0" mnemonicParsing="false" onAction="#editProduct" prefHeight="58.0" prefWidth="226.0" styleClass="content-button" text="Редактировать">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Button>
+                              <Button layoutX="433.0" layoutY="172.0" mnemonicParsing="false" onAction="#deleteProduct" prefHeight="54.0" prefWidth="226.0" styleClass="content-button" text="Удалить">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Button>
+                              <ComboBox fx:id="cbProductSupplier" layoutX="138.0" layoutY="154.0" prefHeight="35.0" prefWidth="226.0" promptText="Поставщик" visibleRowCount="5" />
+                              <ComboBox fx:id="cbProductType" layoutX="138.0" layoutY="199.0" prefHeight="35.0" prefWidth="226.0" promptText="Тип" visibleRowCount="5" />
+                              <Label layoutX="14.0" layoutY="154.0" prefHeight="54.0" prefWidth="101.0" text="Поставщик:">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="14.0" layoutY="199.0" prefHeight="54.0" prefWidth="69.0" text="Тип:">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <TableView fx:id="tableProducts" layoutX="14.0" layoutY="253.0" prefHeight="291.0" prefWidth="647.0">
+                           <columns>
+                              <TableColumn fx:id="colProductID" prefWidth="86.4000244140625" text="Номер" />
+                              <TableColumn fx:id="colProductType" prefWidth="122.4000244140625" text="Тип" />
+                              <TableColumn fx:id="colProductModel" prefWidth="134.4000244140625" text="Модель" />
+                              <TableColumn fx:id="colProductSupplier" prefWidth="132.0" text="Поставщик" />
+                              <TableColumn fx:id="colProductAmount" prefWidth="87.2000732421875" text="Количетсво" />
+                              <TableColumn fx:id="colProductPrice" prefWidth="91.1998291015625" text="Цена/ед" />
+                           </columns>
+                        </TableView>
+                        <TextField fx:id="tfProductSearch" layoutX="14.0" layoutY="553.0" prefHeight="35.0" prefWidth="647.0" promptText="Поиск">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </TextField>
+                     </children></Pane>
+                  <Pane fx:id="paneSuppliers" prefHeight="200.0" prefWidth="200.0" styleClass="content-pane">
+                     <children>
+                        <TableView fx:id="tableSuppliers" layoutX="17.0" layoutY="72.0" prefHeight="209.0" prefWidth="639.0">
+                          <columns>
+                            <TableColumn fx:id="colSupplierID" prefWidth="117.60003662109375" text="C1" />
+                            <TableColumn fx:id="colSupplierName" minWidth="0.0" prefWidth="541.7999877929688" text="C2" />
+                          </columns>
+                        </TableView>
+                        <TextField fx:id="tfSupplierName" layoutX="170.0" layoutY="17.0" prefHeight="27.0" prefWidth="146.0" promptText="Введите имя">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </TextField>
+                        <Label layoutX="18.0" layoutY="24.0" prefHeight="48.0" prefWidth="146.0" text="Имя поставщика:">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Label>
+                        <Button layoutX="337.0" layoutY="13.0" mnemonicParsing="false" onAction="#addSupplier" prefHeight="48.0" prefWidth="146.0" styleClass="content-button" text="Добавить">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="510.0" layoutY="13.0" mnemonicParsing="false" onAction="#deleteSupplier" prefHeight="48.0" prefWidth="146.0" styleClass="content-button" text="Удалить">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Button>
+                        <Line endX="583.3999633789062" endY="0.199981689453125" layoutX="91.0" layoutY="301.0" startX="-100.0" stroke="#5581cd" strokeWidth="2.0" />
+                        <TableView fx:id="tableProductTypes" layoutX="18.0" layoutY="379.0" prefHeight="209.0" prefWidth="639.0">
+                           <columns>
+                              <TableColumn fx:id="colProductTypeID" prefWidth="117.60003662109375" text="C1" />
+                              <TableColumn fx:id="colProductTypeName" minWidth="0.0" prefWidth="541.7999877929688" text="C2" />
+                           </columns>
+                        </TableView>
+                        <Label layoutX="18.0" layoutY="330.0" prefHeight="48.0" prefWidth="146.0" text="Тип товара:">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tfProductTypeName" layoutX="123.0" layoutY="323.0" prefHeight="40.0" prefWidth="193.0" promptText="Введите тип">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </TextField>
+                        <Button layoutX="337.0" layoutY="319.0" mnemonicParsing="false" onAction="#addProductType" prefHeight="48.0" prefWidth="146.0" styleClass="content-button" text="Добавить">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Button>
+                        <Button layoutX="510.0" layoutY="319.0" mnemonicParsing="false" onAction="#deleteProductType" prefHeight="48.0" prefWidth="146.0" styleClass="content-button" text="Удалить">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </Pane>
                </children>
             </StackPane>
          </children></AnchorPane>
       <AnchorPane prefHeight="602.0" prefWidth="262.0" styleClass="stack-pane-container" stylesheets="@../../../../styles/main.css">
          <children>
-            <Pane prefHeight="167.0" prefWidth="262.0" styleClass="header-pane">
-               <children>
-                  <Text fill="#fafafa" layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SalesAccounting" wrappingWidth="192.53677368164062">
-                     <font>
-                        <Font size="26.0" />
-                     </font>
-                  </Text>
-                  <Text fill="WHITE" layoutX="131.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="by Grakovich" />
-                  <Polygon fill="WHITE" layoutX="97.0" layoutY="116.0" points="-70.59999084472656, 22.20001220703125, 52.59999084472656, -20.800003051757812, 0.0, -60.0" stroke="WHITE" strokeType="INSIDE" />
-                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="77.0" layoutY="38.0" />
-                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="63.0" layoutY="59.0" />
-                  <Polygon fill="WHITE" layoutX="200.0" layoutY="122.0" points="-140.00001525878906, 22.79998779296875, -8.000015258789062, 22.79998779296875, 5.5999908447265625, -31.600006103515625" stroke="BLACK" strokeType="INSIDE" />
-                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="140.0" layoutY="80.0" />
-                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="116.0" layoutY="80.0" />
-               </children>
-            </Pane>
             <VBox layoutY="167.0" prefHeight="431.0" prefWidth="262.0">
                <children>
                   <Button fx:id="btnSwitchToOrderPane" mnemonicParsing="false" onAction="#switchToOrderPane" prefHeight="57.0" prefWidth="274.0" styleClass="switch-button" text="Учёт продаж" textFill="WHITE">
@@ -125,7 +246,7 @@
                         <Font name="Candara" size="16.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnSwitchToSupplierPane" mnemonicParsing="false" onAction="#switchToSupplierPane" prefHeight="57.0" prefWidth="274.0" styleClass="switch-button" text="Поставщики" textFill="WHITE">
+                  <Button fx:id="btnSwitchToSupplierPane" mnemonicParsing="false" onAction="#switchToSupplierPane" prefHeight="57.0" prefWidth="274.0" styleClass="switch-button" text="Поставщики и типы товаров" textFill="WHITE">
                      <font>
                         <Font name="Candara" size="16.0" />
                      </font>
@@ -137,6 +258,22 @@
                   </Button>
                </children>
             </VBox>
+            <Pane prefHeight="167.0" prefWidth="262.0" styleClass="header-pane">
+               <children>
+                  <Text fill="#fafafa" layoutX="14.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SalesAccounting" wrappingWidth="192.53677368164062">
+                     <font>
+                        <Font size="26.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="131.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="by Grakovich" />
+                  <Polygon fill="WHITE" layoutX="97.0" layoutY="116.0" points="-70.59999084472656, 22.20001220703125, 52.59999084472656, -20.800003051757812, 0.0, -60.0" stroke="WHITE" strokeType="INSIDE" />
+                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="77.0" layoutY="38.0" />
+                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="63.0" layoutY="59.0" />
+                  <Polygon fill="WHITE" layoutX="200.0" layoutY="122.0" points="-140.00001525878906, 22.79998779296875, -8.000015258789062, 22.79998779296875, 5.5999908447265625, -31.600006103515625" stroke="BLACK" strokeType="INSIDE" />
+                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="140.0" layoutY="80.0" />
+                  <SVGPath content="M40,60 C42,48 44,30 25,32" layoutX="116.0" layoutY="80.0" />
+               </children>
+            </Pane>
          </children>
       </AnchorPane>
    </children>
